--- a/styles/application.scss
+++ b/styles/application.scss
@@ -19,16 +19,15 @@
     }
 }
 
-:root {
+:root,
+body,
+html,
+input {
     font-family: "Inter", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-* {
+*:not(input) {
     user-select: none;
-}
-
-::selection {
-    @apply bg-blue-200;
 }
 
 .menu-grow {
