--- a/styles/application.scss
+++ b/styles/application.scss
@@ -46,7 +46,7 @@ input {
     font-family: "Inter", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-*:not(input) {
+*:not(input, textarea) {
     user-select: none;
 }
 
