--- a/styles/application.scss
+++ b/styles/application.scss
@@ -46,6 +46,10 @@ input {
     font-family: "Inter", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+body {
+    overflow-y: scroll;
+}
+
 *:not(input, textarea) {
     user-select: none;
 }
